Fix colored GCC output with sub-makefiles

--- a/clients/libfs-temp-test/Makefile
+++ b/clients/libfs-temp-test/Makefile
@@ -13,8 +13,8 @@ INCLUDE_FILES+=$(wildcard ../../libfs/include/*.h) $(wildcard ../../libfs/includ
 
 INCLUDE_PATHS=-I. -I../../libfs-core/include -I../../libfs/include
 
-CFLAGS=-g -std=c11
-CXXFLAGS=-g -std=c++17
+CFLAGS=-g -std=c11 -fdiagnostics-color=always
+CXXFLAGS=-g -std=c++17 -fdiagnostics-color=always
 
 LDFLAGS=-L../../libfs-core -l:libfs-core.a -L../../libfs -l:libfs.a
 
