Update teammates' album numbers

--- a/docs/metadata.yaml
+++ b/docs/metadata.yaml
@@ -2,7 +2,7 @@
 title-pl: "Unix - architektura, programowanie i administrowanie"
 
 authorfirst: "Stanisław Zagórowski (lider)"
-albumfirst: "??????"
+albumfirst: "311013"
 
 authorsecond: "Mateusz Brzozowski"
 albumsecond: "310608"
@@ -11,7 +11,7 @@ authorthird: "Bartłomiej Krawczyk"
 albumthird: "310774"
 
 authorfourth: "Adam Sudoł"
-albumfourth: "??????"
+albumfourth: "310933"
 
 institute: "Automatyki i Informatyki Stosowanej"
 faculty: "eiti"
